[package]
name = "RustLangBook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
colored = "2.1.0"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
futures = "0.3.28"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]

